--- a/interfaces/ErrorStrings.html
+++ b/interfaces/ErrorStrings.html
@@ -28,7 +28,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">ErrorStrings</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L295">types.ts:295</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L276">types.ts:276</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -44,30 +44,36 @@
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="maxLength" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>max<wbr/>Length</span><a href="#maxLength" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" id="icon-anchor-a"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" id="icon-anchor-b"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" id="icon-anchor-c"></path></svg></a></h3>
-<div class="tsd-signature">max<wbr/>Length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>length<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span></div>
+<div class="tsd-signature">max<wbr/>Length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><a href="../types/MessageResolver.html" class="tsd-signature-type" data-tsd-kind="Type alias">MessageResolver</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 <div class="tsd-comment tsd-typography"><p>Error message for when the field length is too long.</p>
 <p>Can either be a string, or a function resolving to a string.</p>
 <p>Default:</p>
 <pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-5">n</span><span class="hl-1">) </span><span class="hl-0">=&gt;</span><span class="hl-1"> </span><span class="hl-6">`Must be no more than </span><span class="hl-0">${</span><span class="hl-5">n</span><span class="hl-0">}</span><span class="hl-6"> characters long`</span>
 </code></pre>
 
-<h3>See</h3><p><a href="FieldOptions.html#maxLength">FieldOptions.maxLength</a> for defining a maximum length for the field</p>
+<h3>See</h3><ul>
+<li><a href="FieldOptions.html#maxLength">FieldOptions.maxLength</a> for defining a maximum length for the field</li>
+<li><a href="../types/MessageResolver.html">MessageResolver</a> for the function signature</li>
+</ul>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L331">types.ts:331</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L314">types.ts:314</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="minLength" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>min<wbr/>Length</span><a href="#minLength" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
-<div class="tsd-signature">min<wbr/>Length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>length<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span></div>
+<div class="tsd-signature">min<wbr/>Length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><a href="../types/MessageResolver.html" class="tsd-signature-type" data-tsd-kind="Type alias">MessageResolver</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">&gt;</span></div>
 <div class="tsd-comment tsd-typography"><p>Error message for when the field length is too short.</p>
 <p>Can either be a string, or a function resolving to a string.</p>
 <p>Default:</p>
 <pre><code class="language-ts"><span class="hl-1">(</span><span class="hl-5">n</span><span class="hl-1">) </span><span class="hl-0">=&gt;</span><span class="hl-1"> </span><span class="hl-6">`Must be at least </span><span class="hl-0">${</span><span class="hl-5">n</span><span class="hl-0">}</span><span class="hl-6"> characters long`</span>
 </code></pre>
 
-<h3>See</h3><p><a href="FieldOptions.html#minLength">FieldOptions.minLength</a> for defining a minimum length for the field</p>
+<h3>See</h3><ul>
+<li><a href="FieldOptions.html#minLength">FieldOptions.minLength</a> for defining a minimum length for the field</li>
+<li><a href="../types/MessageResolver.html">MessageResolver</a> for the function signature</li>
+</ul>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L317">types.ts:317</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L299">types.ts:299</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="required" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>required</span><a href="#required" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">required<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -77,7 +83,7 @@
 <h3>See</h3><p><a href="FieldOptions.html#required">FieldOptions.required</a> for defining a field as required</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L303">types.ts:303</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L284">types.ts:284</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -98,7 +104,8 @@
 <div class="tsd-accordion-details">
 <ul>
 <li><a href="../modules.html">formplex-<wbr/>react</a>
-<ul></ul></li></ul></div></details></nav>
+<ul>
+<li class="tsd-kind-namespace"><a href="../modules/validator.html">validator</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
 <li class="current tsd-kind-interface"><a href="ErrorStrings.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-256-path"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)" id="icon-256-text"></path></svg><span>Error<wbr/>Strings</span></a>
