--- a/interfaces/FieldOptions.html
+++ b/interfaces/FieldOptions.html
@@ -30,7 +30,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">FieldOptions</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L125">types.ts:125</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L124">types.ts:124</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -65,7 +65,7 @@
 </ul>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L174">types.ts:174</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L173">types.ts:173</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="maxLength" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>max<wbr/>Length</span><a href="#maxLength" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">max<wbr/>Length<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span></div>
@@ -75,7 +75,7 @@ be provided in <a href="UseFormReturn.html#errors">UseFormReturn.errors</a>.</p>
 <p>To provide a custom error message, use <a href="FieldOptions.html#errorMessages">errorMessages</a>.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L154">types.ts:154</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L153">types.ts:153</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="minLength" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>min<wbr/>Length</span><a href="#minLength" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">min<wbr/>Length<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span></div>
@@ -85,7 +85,7 @@ be provided in <a href="UseFormReturn.html#errors">UseFormReturn.errors</a>.</p>
 <p>To provide a custom error message, use <a href="FieldOptions.html#errorMessages">errorMessages</a>.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L144">types.ts:144</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L143">types.ts:143</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="onBlur" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>on<wbr/>Blur</span><a href="#onBlur" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">on<wbr/>Blur<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>event<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">ChangeEvent</span>, value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span></div>
@@ -113,7 +113,7 @@ be provided in <a href="UseFormReturn.html#errors">UseFormReturn.errors</a>.</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L225">types.ts:225</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L223">types.ts:223</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="onChange" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>on<wbr/>Change</span><a href="#onChange" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">on<wbr/>Change<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>event<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">ChangeEvent</span>, value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span></div>
@@ -141,7 +141,7 @@ be provided in <a href="UseFormReturn.html#errors">UseFormReturn.errors</a>.</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L213">types.ts:213</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L211">types.ts:211</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="parse" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>parse</span><a href="#parse" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">parse<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span></div>
@@ -152,12 +152,14 @@ be provided in <a href="UseFormReturn.html#errors">UseFormReturn.errors</a>.</p>
 <ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-interface">
 <li class="tsd-signature" id="__type-4.__type-5"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span></li>
 <li class="tsd-description">
-<div class="tsd-comment tsd-typography"><p>A custom parser for the field. This will be called when the field is updated, and will cause the
-<a href="UseFormReturn.html#state">state</a> object to be updated with the result of this function.</p>
-<p><a href="UseFormReturn.html#rawState">UseFormReturn.rawState</a> will always contain the raw value of the field as it was
-placed here.</p>
+<div class="tsd-comment tsd-typography"><p>Parse the value of the field before it is set in the form state.</p>
 
-<h3>Returns</h3><p>The parsed value of the field.</p>
+<h3>Returns</h3><p>The parsed value.</p>
+
+<h3>See</h3><ul>
+<li><a href="UseFormReturn.html#state">state</a> for the parsed form state</li>
+<li><a href="UseFormReturn.html#rawState">rawState</a> for the raw form state</li>
+</ul>
 </div>
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
@@ -168,7 +170,7 @@ placed here.</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L201">types.ts:201</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L199">types.ts:199</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="pattern" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>pattern</span><a href="#pattern" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">pattern<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">RegExp</span></div>
@@ -177,7 +179,7 @@ placed here.</p>
 error for a pattern, use <a href="FieldOptions.html#validate">validate</a> instead.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L162">types.ts:162</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L161">types.ts:161</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="required" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>required</span><a href="#required" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">required<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span></div>
@@ -187,20 +189,15 @@ error for a pattern, use <a href="FieldOptions.html#validate">validate</a> inste
 <p>To provide a custom error message, use <a href="FieldOptions.html#errorMessages">errorMessages</a>.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L134">types.ts:134</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L133">types.ts:133</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="validate" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>validate</span><a href="#validate" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
-<div class="tsd-signature">validate<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span></div>
-<div class="tsd-type-declaration">
-<h4>Type declaration</h4>
-<ul class="tsd-parameters">
-<li class="tsd-parameter-signature">
-<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-interface">
-<li class="tsd-signature" id="__type-6.__type-7"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
-<li class="tsd-description">
+<div class="tsd-signature">validate<span class="tsd-signature-symbol">?:</span> <a href="../types/Validator-1.html" class="tsd-signature-type" data-tsd-kind="Type alias">Validator</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">&gt;</span></div>
 <div class="tsd-comment tsd-typography"><p>A custom validation function for the field.</p>
 <p>If it returns an empty string, <code>null</code> or <code>undefined</code>, the field is valid.</p>
 <p>Otherwise, the field is invalid and the returned string will be the error message.</p>
+
+<h3>Param</h3><p>The value of the field.</p>
 
 <h3>Returns</h3><p>The error message, if any, or undefined/null if the field is valid.</p>
 
@@ -209,17 +206,9 @@ error for a pattern, use <a href="FieldOptions.html#validate">validate</a> inste
 <li><a href="UseFormOptions.html#errorMessages">UseFormOptions.errorMessages</a> for global error messages for the default validation methods</li>
 <li><a href="FieldOptions.html#errorMessages">errorMessages</a> for field-specific error messages for the default validation methods</li>
 </ul>
-</div>
-<div class="tsd-parameters">
-<h4 class="tsd-parameters-title">Parameters</h4>
-<ul class="tsd-parameter-list">
-<li>
-<h5>value: <span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">K</span><span class="tsd-signature-symbol">]</span></h5>
-<div class="tsd-comment tsd-typography"><p>The value of the field.</p>
-</div></li></ul></div>
-<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L189">types.ts:189</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L188">types.ts:188</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -240,7 +229,8 @@ error for a pattern, use <a href="FieldOptions.html#validate">validate</a> inste
 <div class="tsd-accordion-details">
 <ul>
 <li><a href="../modules.html">formplex-<wbr/>react</a>
-<ul></ul></li></ul></div></details></nav>
+<ul>
+<li class="tsd-kind-namespace"><a href="../modules/validator.html">validator</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
 <li class="current tsd-kind-interface"><a href="FieldOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-256-path"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)" id="icon-256-text"></path></svg><span>Field<wbr/>Options</span></a>
