--- a/interfaces/UseFormOptions.html
+++ b/interfaces/UseFormOptions.html
@@ -30,7 +30,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">UseFormOptions</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L6">types.ts:6</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L6">types.ts:6</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -57,7 +57,7 @@
 <h3>See</h3><p><a href="UseFormReturn.html#validate">validate</a> for manual validation trigger</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L42">types.ts:42</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L42">types.ts:42</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="errorMessages" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>error<wbr/>Messages</span><a href="#errorMessages" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">error<wbr/>Messages<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><a href="ErrorStrings.html" class="tsd-signature-type" data-tsd-kind="Interface">ErrorStrings</a><span class="tsd-signature-symbol">&gt;</span></div>
@@ -73,7 +73,7 @@
 </ul>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L27">types.ts:27</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L27">types.ts:27</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="initialState" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>initial<wbr/>State</span><a href="#initialState" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">initial<wbr/>State<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">Partial</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span><span class="tsd-signature-symbol">&gt;</span></div>
@@ -81,7 +81,7 @@
 Any missing field will be empty.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L11">types.ts:11</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L11">types.ts:11</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface"><a id="onSubmit" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>on<wbr/>Submit</span><a href="#onSubmit" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">on<wbr/>Submit<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span>values<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type" data-tsd-kind="Type parameter">T</span>, e<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">FormEvent</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">HTMLFormElement</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span></div>
@@ -103,7 +103,7 @@ Any missing field will be empty.</p>
 <h5>e: <span class="tsd-signature-type">FormEvent</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">HTMLFormElement</span><span class="tsd-signature-symbol">&gt;</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/931d3c7/src/types.ts#L16">types.ts:16</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/chenasraf/formplex-react/blob/c7d8caa/src/types.ts#L16">types.ts:16</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -124,7 +124,8 @@ Any missing field will be empty.</p>
 <div class="tsd-accordion-details">
 <ul>
 <li><a href="../modules.html">formplex-<wbr/>react</a>
-<ul></ul></li></ul></div></details></nav>
+<ul>
+<li class="tsd-kind-namespace"><a href="../modules/validator.html">validator</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
 <li class="current tsd-kind-interface"><a href="UseFormOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-256-path"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)" id="icon-256-text"></path></svg><span>Use<wbr/>Form<wbr/>Options</span></a>
